mule-user-guide/v/3.3/using-mule-with-spring.adoc
= Using Mule with Spring
:keywords: anypoint studio, studio, mule esb, spring

Mule leverages the Spring framework for developing Java applications. Mule ESB 3.3 supports the latest version of the framework, Spring 3.1, making use of the Eclipse-based development environment.

*link:/mule\-user\-guide/v/3\.6/about-the-xml-configuration-file[About the XML Configuration File]* +
The most common way to configure Mule ESB is with Spring XML files that use custom Mule namespaces. +
Use one of the two namespaces in your spring framework schema in Mule:

* http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.1.xsd
* http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd

*link:/mule\-user\-guide/v/3\.6/spring-application-contexts[Spring Application Contexts]* +
Mule offers several options for creating and managing Spring application contexts for your application.

* Single application context
* Multiple application context
* Existing application context
* Existing application context as parent

*link:https://docs.mulesoft.com/mule-user-guide/v/3.7/using-spring-beans-as-flow-components[Using Spring Beans as Flow Components]* +
Build Spring beans to define component behaviors which Mule applications can reference.

*Spring Bean Definition Profiles* +
Mule’s configuration file takes advantage of Spring 3.1's ability to create *bean definition profiles*. You can use Spring bean definition profiles to register different beans for different target environments, instead of using one bean for all target environments. Refer to http://blog.springsource.org/2011/02/11/spring-framework-3-1-m1-released/[Spring’s blog posting] for more information about bean definition profiles.
