mule-user-guide/v/3.7/using-mule-with-spring.adoc
= Using Mule with Spring
:keywords: anypoint studio, studio, mule, spring

Mule leverages the Spring framework for developing Java applications. M

== Supported Spring Versions

* Mule 3.8: Spring 4.1.9 and Spring Security 4.0.4
* Mule 3.7.5: Spring 4.1.9 and Spring Security 4.0.4
* Mule 3.7.0 - 3.7.4: Spring 4.1.6 and Spring Security 4.0.1
* Mule 3.6 and earlier: Spring 3.2 and Spring Security 3.0

See also: link:http://docs.spring.io/spring-security/site/migrate/current/3-to-4/html5/migrate-3-to-4-xml.html[Spring Security Migrate 3 to 4]

== Mule App XML Configuration File

link:/mule-user-guide/v/3.8/about-the-xml-configuration-file[About the XML Configuration File]

The most common way to configure Mule is with Spring XML files that use custom Mule namespaces.

Use one of the two namespaces in your spring framework schema in Mule:

* `+http://www.springframework.org/schema/beans+` `+http://www.springframework.org/schema/beans/spring-beans-current.xsd+`
* `+http://www.springframework.org/schema/beans+` `+http://www.springframework.org/schema/beans/spring-beans-current.xsd+`

== Spring Application Contexts

[TIP]
See link:/mule-user-guide/v/3.8/spring-application-contexts[Spring Application Contexts]

Mule offers several options for creating and managing Spring application contexts for your application.

* Single application context
* Multiple application context
* Existing application context
* Existing application context as parent

link:/mule-user-guide/v/3.8/using-spring-beans-as-flow-components[Using Spring Beans as Flow Components]

Build Spring beans to define component behaviors which Mule applications can reference.

== Spring Bean Definition Profiles

Mule’s configuration file takes advantage of Spring 4.1's ability to create *bean definition profiles*. You can use Spring bean definition profiles to register different beans for different target environments, instead of using one bean for all target environments. Refer to link:http://docs.spring.io/spring/docs/4.1.6.RELEASE/spring-framework-reference/htmlsingle/[Spring’s blog posting] for more information about bean definition profiles.

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
